chrome/browser/resources/contextual_tasks/app.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=chrome://resources/cr_elements/cr_shared_vars.css.js
 * #scheme=relative
 * #css_wrapper_metadata_end */

:host {
  --color-composebox-cancel-button: rgba(10,10,10, 1);
  /* The top border of matches/tab suggestions dropdown in context menu. */
  --color-composebox-file-carousel-divider: rgba(210, 225, 252, 1);
  --color-composebox-file-carousel-remove-button: rgba(0, 0, 0, 0.6);
  --color-composebox-file-carousel-remove-gradient-end: rgba(0, 0, 0, 0.2);
  --color-composebox-file-carousel-remove-gradient-start: rgba(0, 0, 0, 0.2);
  --color-composebox-file-carousel-url: rgba(91, 91, 91, 1);
  --color-composebox-file-chip-background: rgb(225, 227, 232);
  --color-composebox-file-chip-background-hovered: rgba(225, 227, 232, 1);
  --color-composebox-file-chip-favicon-background: rgba(255, 255, 255, 1);
  --color-composebox-file-chip-text: rgba(31, 31, 31, 1);
  --color-composebox-font: rgba(86, 89, 94, 1);
  --color-composebox-font-dark: rgba(10, 10, 10, 1);
  /* Used in matches + textbox input (but textbox input overridden
   * for co-browsing to be color-composebox-font.
   */
  --color-composebox-font-light: rgba(31, 31, 31, 1);
  --color-composebox-input-plate-outline: rgba(220, 223, 229, 1);
  --color-composebox-hover: rgba(233, 235, 240, 1);
  --color-composebox-loading-end: rgba(236, 237, 239, 1);
  --color-composebox-loading-start: rgba(241, 243, 244, 1);
  --color-composebox-pdf-chip-icon-background: rgba(219, 69, 55, 1);
  --color-composebox-pdf-chip-icon-border: rgba(255, 255, 255, 1);
  --color-composebox-type-ahead: rgba(117, 117, 117, 1);
  --color-composebox-type-ahead-chip: rgba(117, 117, 117, 1);
  --color-composebox-voice-lens-button: rgba(10, 10, 10, 1);
  --color-search-animated-glow-dragging-opaque-frost:
      rgba(240, 242, 245);
  --color-searchbox-results-background-hovered: rgba(31, 31, 31, 0.06);
  --color-composebox-zero-state-suggestions-background-hovered:
      rgba(247, 248, 250, 1);
  --color-suggestions-background-loading: rgba(241, 243, 244, 1);
  --color-zero-state-greeting: rgba(10, 10, 10, 1);
  --composebox-context-menu-entrypoint-button-color: rgba(31, 31, 31, 1);
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --cr-composebox-file-thumbnail-remove-button-fill-color: rgba(255, 255, 255, 1);
  --cr-composebox-submit-button-hover-color: rgba(32, 33, 36, .2);
  /* Dropdown item color in context menu entrypoint. */
  --cr-primary-text-color: rgba(31, 31, 31, 1);
  --error-bottom-line-color: #70757A;
  --error-top-line-color: #202124;
  --gradient-protection-width: 100%;
  --max-composebox-width: 692px;
  --min-composebox-width: 150px;
  --paper-tooltip-background:rgba(255, 255, 255, 1);
  --paper-tooltip-text-color: rgba(0, 0, 0, 1);
  --protected-icon-background-color: #535353;
  --remove-button-border-radius: 10%;
  --remove-button-height: var(--remove-button-width);
  --remove-button-inset-inline-end: calc((var(--thumbnail-chip-width) - var(--thumbnail-chip-icon-size)) / 2);
  --remove-button-width: calc(var(--thumbnail-chip-icon-size) + var(--thumbnail-chip-padding) * 2);
  --search-background-color: rgba(255, 255, 255, 1);
  --search-background-color-rgb: 255, 255, 255;
  --thumbnail-chip-icon-size: 16px;
  --thumbnail-chip-overlay-width: 100%;
  --thumbnail-chip-padding: 6px;
  --thumbnail-chip-width: 154px;
  --ghost-loader-base: #F3F5F6;
  --ghost-loader-highlight: #DEE1E3;

  /* Toolbar colors */
  --toolbar-background-color: var(--search-background-color);
  --toolbar-button-icon-color: var(--cr-fallback-color-on-surface-subtle);
  --toolbar-divider-color: rgb(211,227,253);
  --toolbar-favicon-border-color: var(--cr-fallback-color-surface5);
  --toolbar-menu-background-color: rgb(255, 255, 255);
  --toolbar-text-color: rgb(31, 31, 31);

  background-color: var(--search-background-color);
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto 1fr;
  height: 100%;
  overflow: hidden;
}


:host([is-ai-page_]) {
  /* Only set this transition for AIM results so it only applies when going
    * from All tab to AIM results and not the reverse. */
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  transition-property: --search-background-color,
                       --cr-composebox-background-color;
}

/* Light mode not on AI page */
:host(:not([is-ai-page_]):not([dark-mode_])) {
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --search-background-color: white;
}

/* Light mode on AI page */
:host([is-ai-page_]:not([dark-mode_])) {
  --cr-composebox-background-color: rgba(243, 245, 246, 1);
  --search-background-color: white;
}

/* Dark mode not on AI page */
:host(:not([is-ai-page_])[dark-mode_]) {
  --cr-composebox-background-color: rgba(40, 41, 42, 1);
  --search-background-color: rgba(31, 31, 31, 1);
}

/* Dark mode on AI page */
:host([is-ai-page_][dark-mode_]) {
  --cr-composebox-background-color: rgba(29, 30, 38, 1);
  --search-background-color: rgba(16, 18, 24, 1);
}
/* ... */

